@@ -20,4 +20,4 @@ no_index:
 requires: {}
 resources:
   repository: https://github.com/toddr/IO-Tty
-version: 1.11
+version: 1.11_01
