@@ -10,7 +10,7 @@ require POSIX;
 
 use vars qw(@ISA $VERSION);
 
-$VERSION = '1.11'; # keep same as in Tty.pm
+$VERSION = '1.11_01'; # keep same as in Tty.pm
 
 @ISA = qw(IO::Handle);
 eval { local $^W = 0; undef local $SIG{__DIE__}; require IO::Stty };
@@ -155,7 +155,7 @@ IO::Pty - Pseudo TTY object class
 
 =head1 VERSION
 
-1.11
+1.11_01
 
 =head1 SYNOPSIS
 
