@@ -13,8 +13,8 @@ require DynaLoader;
 
 use vars qw(@ISA $VERSION $XS_VERSION $CONFIG $DEBUG);
 
-$VERSION = '1.11';
-$XS_VERSION = "1.11";
+$VERSION = '1.11_01';
+$XS_VERSION = "1.11_01";
 @ISA = qw(IO::Handle);
 
 eval { local $^W = 0; undef local $SIG{__DIE__}; require IO::Stty };
@@ -118,7 +118,7 @@ IO::Tty - Low-level allocate a pseudo-Tty, import constants.
 
 =head1 VERSION
 
-1.11
+1.11_01
 
 =head1 SYNOPSIS
 
