@@ -1,5 +1,6 @@
 2014-05-05 Todd Rinaldo <toddr@cpan.org>
 	* Release 1.11 to CPAN with explicit dropping of support for Win32 (we never supported it) - RT 77813
+	* Bump version to a devel release 1.11_01 for experimental work.
 	* Fix typo in compilter - RT 75649
 	* Add support for PERL_MM_OPT
 
